feat: library groups to support e.g. Bible and Gilgamesh
